Fix spacing

--- a/src/scss/components/_boxes.scss
+++ b/src/scss/components/_boxes.scss
@@ -28,7 +28,7 @@
 
     .details-wrapper {
         height: 180px;
-        padding: 3rem;
+        padding: 30px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -56,14 +56,14 @@
     }
 
     .title {
-        font-size: 1.8rem;
-        line-height: 2.4rem;
+        font-size: 18px;
+        line-height: 24px;
         font-weight: 600;
         margin-bottom: 20px;
     }
 
     .description {
-        font-size: 1.5rem;
+        font-size: 15px;
         color: #000000;
         margin-bottom: 0;
     }
