--- a/src/scss/components/_inputs.scss
+++ b/src/scss/components/_inputs.scss
@@ -2,11 +2,11 @@
     display: flex;
     align-items: center;
     position: relative;
-    padding-left: 3.2rem;
-    margin-bottom: 1.2rem;
+    padding-left: 32px;
+    margin-bottom: 12px;
     cursor: pointer;
     user-select: none;
-    font-size: 1.6rem;
+    font-size: 16px;
     line-height: 1;
 
     .#{$op-prefix}checkbox {
@@ -33,8 +33,8 @@
         position: absolute;
         top: 0;
         left: 0;
-        height: 1.6rem;
-        width: 1.6rem;
+        height: 16px;
+        width: 16px;
         background-color: transparent;
         border: 2px solid $color--opui-gray400;
         border-radius: 3px;
@@ -63,21 +63,21 @@
     align-items: center;
 
     .opui-input[type="radio"] {
-        font-size: 1.6rem;
-        width: 1.6rem;
-        height: 1.6rem;
+        font-size: 16px;
+        width: 16px;
+        height: 16px;
         border-color: $color--opui-gray300;
         box-shadow: none;
         padding: 0;
-        margin: 0 0.5rem 0 0;
+        margin: 0 5px 0 0;
 
         &:before {
             background-color: $color--opui-blue;
             border-radius: 50%;
             line-height: 1;
             content: "";
-            width: 1rem;
-            height: 1rem;
+            width: 10px;
+            height: 10px;
             float: none;
         }
     }
