--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -96,8 +96,8 @@
     justify-content: space-between;
     padding: 16px;
     border-bottom: 1px solid #dee2e6;
-    border-top-left-radius: calc(0.3rem - 1px);
-    border-top-right-radius: calc(0.3rem - 1px);
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
 
     h1 {
         line-height: 30px;
