--- a/src/scss/components/_navigations.scss
+++ b/src/scss/components/_navigations.scss
@@ -284,19 +284,19 @@
     justify-content: space-between;
     border-bottom: 1px solid $color--opui-gray200;
     width: 100%;
-    margin: 1.5rem 0;
+    margin: 15px 0;
 
     ul {
         display: flex;
         list-style-type: none;
-        padding: 2rem 0;
+        padding: 20px 0;
         margin: 0;
 
         li {
             position: relative;
-            font-size: 1.4rem;
+            font-size: 14px;
             font-weight: 500;
-            padding: 0px 2.4rem;
+            padding: 0 24px;
             margin: 0;
 
             &:first-child {
@@ -313,7 +313,7 @@
 
             a {
                 color: inherit;
-                padding: 2rem 0px;
+                padding: 20px 0px;
                 text-decoration: none;
             }
 
@@ -322,14 +322,14 @@
                 height: 50px;
                 position: absolute;
                 z-index: 2;
-                top: -1.2rem;
-                left: -1.2rem;
+                top: -12px;
+                left: -12px;
                 cursor: pointer;
                 opacity: 0;
 
                 ~ ul li .opui-nested-navigation {
                     top: 0;
-                    left: calc(100% + 2rem);
+                    left: calc(100% + 20px);
                 }
 
                 &:checked ~ .#{$op-prefix}nested-navigation {
@@ -340,9 +340,9 @@
 
             .#{$op-prefix}nested-navigation {
                 position: absolute;
-                top: calc(100% + 1.3rem);
+                top: calc(100% + 13px);
                 display: none;
-                padding: 0 2rem;
+                padding: 0 20px;
                 z-index: 1000;
                 background: #fff;
                 text-align: left;
@@ -367,7 +367,7 @@
 
     .#{$op-prefix}navigation-hover {
         background-color: var(--opui--blue);
-        bottom: 1.5rem;
+        bottom: 15px;
         display: block;
         height: 2px;
         left: 0;
@@ -390,10 +390,10 @@
             li {
                 width: 100%;
                 border-bottom: 1px solid $color--opui-gray200;
-                padding: 1rem 0;
+                padding: 10px 0;
 
                 a {
-                    padding: 1rem 0px;
+                    padding: 10px 0;
                 }
             }
         }
