--- a/src/scss/components/_selects.scss
+++ b/src/scss/components/_selects.scss
@@ -1,9 +1,9 @@
 .#{$op-prefix}select {
-    font-size: 1.4rem;
+    font-size: 14px;
     line-height: 2;
     border: none;
     background-color: $color--opui-gray150;
-    padding: 0.3rem 2rem 0.3rem 0.5rem;
+    padding: 3px 20px 3px 5px;
     border-bottom: 2px solid $color--opui-gray300;
     border-radius: 0;
     color: $color--opui-gray900;
